# alloy

./: Cargo.toml  README.md  deny.toml  packages.txt
.github/workflows/: ci.yml
crates/alloy/: Cargo.toml
crates/alloy/src/: lib.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: account.rs  constants.rs  header.rs  lib.rs  request.rs  sealed.rs  signed.rs
crates/consensus/src/receipt/: any.rs  envelope.rs  mod.rs  receipts.rs
crates/consensus/src/transaction/: eip1559.rs  eip2930.rs  eip4844.rs  envelope.rs  legacy.rs  mod.rs  typed.rs
crates/contract/: Cargo.toml  README.md
crates/contract/src/: call.rs  error.rs  eth_call.rs  event.rs  instance.rs  interface.rs  lib.rs
crates/eip7547/: Cargo.toml  README.md
crates/eip7547/src/: summary.rs
crates/eips/: Cargo.toml  README.md
crates/eips/src/: eip1898.rs  eip2718.rs  eip2930.rs  eip2935.rs  eip4788.rs  eip4895.rs  eip6110.rs  eip7002.rs
crates/eips/src/eip1559/: basefee.rs  constants.rs
crates/eips/src/eip4844/: mod.rs  sidecar.rs  trusted_setup_points.rs
crates/genesis/: Cargo.toml  README.md
crates/genesis/src/: lib.rs
crates/json-rpc/: Cargo.toml  README.md
crates/json-rpc/src/: lib.rs  notification.rs  request.rs
crates/network/: Cargo.toml  README.md
crates/network/src/: lib.rs
crates/network/src/any/: builder.rs  mod.rs
crates/network/src/ethereum/: builder.rs  mod.rs  signer.rs
crates/network/src/transaction/: builder.rs  signer.rs
crates/node-bindings/: Cargo.toml  README.md
crates/node-bindings/src/: anvil.rs  geth.rs  lib.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: builder.rs  chain.rs  heart.rs  lib.rs  utils.rs
crates/provider/src/ext/: admin.rs  debug.rs  engine.rs  txpool.rs
crates/provider/src/fillers/: chain_id.rs  gas.rs  join_fill.rs  mod.rs  nonce.rs  signer.rs
crates/provider/src/layers/: anvil.rs  chain.rs
crates/provider/src/provider/: call.rs  root.rs  sendable.rs  trait.rs  wallet.rs  with_block.rs
crates/pubsub/: Cargo.toml  README.md
crates/pubsub/src/: connect.rs  frontend.rs  handle.rs  ix.rs  service.rs  sub.rs
crates/pubsub/src/managers/: active_sub.rs  in_flight.rs  req.rs  sub.rs
crates/rpc-client/: Cargo.toml  README.md
crates/rpc-client/src/: batch.rs  builder.rs  builtin.rs  call.rs  client.rs  lib.rs  poller.rs
crates/rpc-client/tests/it/: http.rs  ipc.rs  ws.rs
crates/rpc-types/: Cargo.toml  README.md
crates/rpc-types-anvil/: Cargo.toml  README.md
crates/rpc-types-anvil/src/: lib.rs
crates/rpc-types-beacon/: Cargo.toml  README.md
crates/rpc-types-beacon/src/: header.rs  lib.rs  payload.rs  relay.rs  sidecar.rs  withdrawals.rs
crates/rpc-types-beacon/src/events/: attestation.rs  light_client_finality.rs  light_client_optimistic.rs  mod.rs
crates/rpc-types-engine/: Cargo.toml  README.md
crates/rpc-types-engine/src/: cancun.rs  forkchoice.rs  jwt.rs  lib.rs  optimism.rs  payload.rs  transition.rs
crates/rpc-types-trace/: Cargo.toml  README.md
crates/rpc-types-trace/src/: common.rs  filter.rs  opcode.rs  otterscan.rs  parity.rs  tracerequest.rs
crates/rpc-types-trace/src/geth/: call.rs  mod.rs  pre_state.rs
crates/rpc-types/src/: lib.rs  with_other.rs
crates/rpc-types/src/eth/: account.rs  admin.rs  block.rs  call.rs  fee.rs  filter.rs  index.rs  log.rs  mod.rs  pubsub.rs  raw_log.rs  state.rs  syncing.rs  txpool.rs  work.rs
crates/rpc-types/src/eth/transaction/: common.rs  error.rs  mod.rs  optimism.rs  receipt.rs  request.rs  signature.rs  tx_type.rs
crates/serde/: Cargo.toml  README.md
crates/serde/src/: bool.rs  lib.rs  num.rs  storage.rs  ttd.rs
crates/signer/: Cargo.toml  README.md
crates/signer-aws/: Cargo.toml  README.md
crates/signer-aws/src/: signer.rs
crates/signer-gcp/: Cargo.toml  README.md
crates/signer-gcp/src/: signer.rs
crates/signer-ledger/: Cargo.toml  README.md
crates/signer-ledger/src/: signer.rs  types.rs
crates/signer-trezor/: Cargo.toml  README.md
crates/signer-trezor/src/: signer.rs  types.rs
crates/signer-wallet/: Cargo.toml  README.md
crates/signer-wallet/src/: error.rs  lib.rs  mnemonic.rs  private_key.rs  yubi.rs
crates/signer/src/: error.rs  lib.rs  signer.rs  utils.rs
crates/transport/: Cargo.toml  README.md
crates/transport-http/: Cargo.toml  README.md
crates/transport-http/src/: hyper_transport.rs  lib.rs  reqwest_transport.rs
crates/transport-ipc/: Cargo.toml  README.md
crates/transport-ipc/src/: connect.rs  lib.rs  mock.rs
crates/transport-ws/: Cargo.toml  README.md
crates/transport-ws/src/: lib.rs  native.rs  wasm.rs
crates/transport/src/: boxed.rs  error.rs  lib.rs  trait.rs  utils.rs
scripts/: check_no_std.sh  publish.sh  test_publish.sh
