[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MathieuDutSik/alloy"
repository = "https://github.com/MathieuDutSik/alloy"
exclude = ["benches/", "tests/"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
all = "warn"
missing_const_for_fn = "warn"
use_self = "warn"
option_if_let_else = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
linera-alloy-consensus = { version = "0.1.0", default-features = false, path = "crates/consensus" }
linera-alloy-contract = { version = "0.1.0", default-features = false, path = "crates/contract" }
linera-alloy-eips = { version = "0.1.0", default-features = false, path = "crates/eips" }
linera-alloy-eip7547 = { version = "0.1.0", default-features = false, path = "crates/eip7547" }
linera-alloy-genesis = { version = "0.1.0", default-features = false, path = "crates/genesis" }
linera-alloy-json-rpc = { version = "0.1.0", default-features = false, path = "crates/json-rpc" }
linera-alloy-network = { version = "0.1.0", default-features = false, path = "crates/network" }
linera-alloy-node-bindings = { version = "0.1.0", default-features = false, path = "crates/node-bindings" }
linera-alloy-provider = { version = "0.1.0", default-features = false, path = "crates/provider" }
linera-alloy-pubsub = { version = "0.1.0", default-features = false, path = "crates/pubsub" }
linera-alloy-rpc-client = { version = "0.1.0", default-features = false, path = "crates/rpc-client" }
linera-alloy-rpc-types-engine = { version = "0.1.0", default-features = false, path = "crates/rpc-types-engine" }
linera-alloy-rpc-types-anvil = { version = "0.1.0", default-features = false, path = "crates/rpc-types-anvil" }
linera-alloy-rpc-types-beacon = { version = "0.1.0", default-features = false, path = "crates/rpc-types-beacon" }
linera-alloy-rpc-types-trace = { version = "0.1.0", default-features = false, path = "crates/rpc-types-trace" }
linera-alloy-rpc-types = { version = "0.1.0", default-features = false, path = "crates/rpc-types" }
linera-alloy-serde = { version = "0.1.0", default-features = false, path = "crates/serde" }
linera-alloy-signer = { version = "0.1.0", default-features = false, path = "crates/signer" }
linera-alloy-signer-aws = { version = "0.1.0", default-features = false, path = "crates/signer-aws" }
linera-alloy-signer-gcp = { version = "0.1.0", default-features = false, path = "crates/signer-gcp" }
linera-alloy-signer-ledger = { version = "0.1.0", default-features = false, path = "crates/signer-ledger" }
linera-alloy-signer-trezor = { version = "0.1.0", default-features = false, path = "crates/signer-trezor" }
linera-alloy-signer-wallet = { version = "0.1.0", default-features = false, path = "crates/signer-wallet" }
linera-alloy-transport = { version = "0.1.0", default-features = false, path = "crates/transport" }
linera-alloy-transport-http = { version = "0.1.0", default-features = false, path = "crates/transport-http" }
linera-alloy-transport-ipc = { version = "0.1.0", default-features = false, path = "crates/transport-ipc" }
linera-alloy-transport-ws = { version = "0.1.0", default-features = false, path = "crates/transport-ws" }

test-utils = { version = "0.1.0", default-features = false, path = "crates/internal-test-utils", package = "alloy-internal-test-utils" }

linera-alloy-core = { git = "https://github.com/MathieuDutSik/ethreum_core/", subdir = "crates/core", rev = "d649bb71a003adf88a4fb7de5c2c8a17e7b2569f", default-features = false }
linera-alloy-dyn-abi = { git = "https://github.com/MathieuDutSik/ethreum_core/", subdir = "crates/dyn-abi", rev = "d649bb71a003adf88a4fb7de5c2c8a17e7b2569f", default-features = false }
linera-alloy-json-abi = { git = "https://github.com/MathieuDutSik/ethreum_core/", subdir = "crates/json-abi", rev = "d649bb71a003adf88a4fb7de5c2c8a17e7b2569f", default-features = false }
linera-alloy-primitives = { git = "https://github.com/MathieuDutSik/ethreum_core/", subdir = "crates/primitives", rev = "d649bb71a003adf88a4fb7de5c2c8a17e7b2569f", default-features = false }
linera-alloy-sol-types = { git = "https://github.com/MathieuDutSik/ethreum_core/", subdir = "crates/sol-types", rev = "d649bb71a003adf88a4fb7de5c2c8a17e7b2569f", default-features = false }

alloy-rlp = { version = "0.3", default-features = false }

alloy-chains = { version = "0.1.18", default-features = false }

# ethereum
ethereum_ssz_derive = "0.5"
ethereum_ssz = "0.5"

# crypto
c-kzg = { version = "1.0", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
spki = { version = "0.7", default-features = false }

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-utils-wasm = "0.1"

hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
http-body-util = "0.1"
tokio = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
home = "0.5"
itertools = "0.12"
once_cell = { version = "1.19", default-features = false }
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
semver = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"
url = "2.5"
derive_more = "0.99.17"

## serde
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = "3.3.0"

## misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
proptest = "1.4"
proptest-derive = "0.4"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = "3.10"
