[package]
name = "alloy"
description = "Connect applications to blockchains"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# core
alloy-core = { workspace = true, default-features = false }

# alloy
linera-alloy-consensus = { workspace = true, default-features = false, optional = true }
alloy-contract = { workspace = true, default-features = false, optional = true }
linera-alloy-eips = { workspace = true, default-features = false, optional = true }
linera-alloy-genesis = { workspace = true, default-features = false, optional = true }
alloy-network = { workspace = true, default-features = false, optional = true }
alloy-node-bindings = { workspace = true, default-features = false, optional = true }

# providers
alloy-provider = { workspace = true, default-features = false, optional = true }

# pubsub
linera-alloy-pubsub = { workspace = true, default-features = false, optional = true }

# rpc
linera-alloy-json-rpc = { workspace = true, default-features = false, optional = true }
linera-alloy-rpc-client = { workspace = true, default-features = false, optional = true }
linera-alloy-rpc-types-beacon = { workspace = true, default-features = false, optional = true }
linera-alloy-rpc-types-engine = { workspace = true, default-features = false, optional = true }
linera-alloy-rpc-types-trace = { workspace = true, default-features = false, optional = true }
linera-alloy-rpc-types = { workspace = true, default-features = false, optional = true }

# serde
linera-alloy-serde = { workspace = true, default-features = false, optional = true }

# signer
alloy-signer = { workspace = true, default-features = false, optional = true }
alloy-signer-aws = { workspace = true, default-features = false, optional = true }
alloy-signer-gcp = { workspace = true, default-features = false, optional = true }
alloy-signer-ledger = { workspace = true, default-features = false, optional = true }
alloy-signer-trezor = { workspace = true, default-features = false, optional = true }
alloy-signer-wallet = { workspace = true, default-features = false, optional = true }

# transport
linera-alloy-transport = { workspace = true, default-features = false, optional = true }
linera-alloy-transport-http = { workspace = true, default-features = false, optional = true }
linera-alloy-transport-ipc = { workspace = true, default-features = false, optional = true }
linera-alloy-transport-ws = { workspace = true, default-features = false, optional = true }

# optional
reqwest = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# ----------------------------------------- Configuration ---------------------------------------- #

[features]
default = ["std", "reqwest"]

# std
std = [
    "alloy-core/std",
    "linera-alloy-eips?/std",
    "linera-alloy-genesis?/std",
    "linera-alloy-serde?/std",
    "linera-alloy-consensus?/std",
]

# configuration
reqwest = [
    "dep:reqwest",
    "linera-alloy-rpc-client?/reqwest",
    "alloy-provider?/reqwest",
    "linera-alloy-transport-http?/reqwest",
    "linera-alloy-transport-http?/reqwest-default-tls",
]
hyper = [
    "dep:hyper",
    "linera-alloy-rpc-client?/hyper",
    "alloy-provider?/hyper",
    "linera-alloy-transport-http?/hyper",
]

# ---------------------------------------- Main re-exports --------------------------------------- #

# general
consensus = ["dep:linera-alloy-consensus"]
contract = ["dep:alloy-contract", "dyn-abi", "json-abi", "json", "sol-types"]
eips = ["dep:linera-alloy-eips"]
genesis = ["dep:linera-alloy-genesis"]
network = ["dep:alloy-network"]
node-bindings = ["dep:alloy-node-bindings", "alloy-provider?/anvil"]

# providers
providers = ["dep:alloy-provider"]
provider-http = ["providers", "transport-http"]
provider-ws = ["providers", "alloy-provider?/ws", "transport-ws"]
provider-ipc = ["providers", "alloy-provider?/ipc", "transport-ipc"]

# pubsub
pubsub = [
    "dep:linera-alloy-pubsub",
    "alloy-contract?/pubsub",
    "alloy-provider?/pubsub",
    "linera-alloy-rpc-client?/pubsub",
]

# rpc
rpc = []
json-rpc = ["rpc", "dep:linera-alloy-json-rpc"]
rpc-client = ["rpc", "dep:linera-alloy-rpc-client"]
rpc-client-ws = ["rpc", "linera-alloy-rpc-client?/ws"]
rpc-client-ipc = ["rpc", "linera-alloy-rpc-client?/ipc"]
rpc-types = ["rpc"]
rpc-types-eth = ["rpc-types", "dep:linera-alloy-rpc-types"]
rpc-types-beacon = ["rpc-types", "dep:linera-alloy-rpc-types-beacon"]
rpc-types-engine = ["rpc-types", "dep:linera-alloy-rpc-types-engine"]
rpc-types-json = [
    "linera-alloy-rpc-types?/jsonrpsee-types",
    "linera-alloy-rpc-types-engine?/jsonrpsee-types",
]
rpc-types-trace = ["rpc-types", "dep:linera-alloy-rpc-types-trace"]

# signers
signers = ["dep:alloy-signer"]
signer-aws = ["signers", "dep:alloy-signer-aws"]
signer-gcp = ["signers", "dep:alloy-signer-gcp"]
signer-ledger = ["signers", "dep:alloy-signer-ledger"]
signer-ledger-browser = ["signer-ledger", "alloy-signer-ledger?/browser"]
signer-ledger-node = ["signer-ledger", "alloy-signer-ledger?/node"]
signer-trezor = ["signers", "dep:alloy-signer-trezor"]
signer-wallet = ["signers", "dep:alloy-signer-wallet"]
signer-keystore = ["signer-wallet", "alloy-signer-wallet?/keystore"]
signer-mnemonic = ["signer-wallet", "alloy-signer-wallet?/mnemonic"]
signer-mnemonic-all-languages = [
    "signer-mnemonic",
    "alloy-signer-wallet?/mnemonic-all-languages",
]
signer-yubihsm = ["signer-wallet", "alloy-signer-wallet?/yubihsm"]

# transports
transports = ["dep:linera-alloy-transport"]
transport-http = ["transports", "dep:linera-alloy-transport-http"]
transport-ipc = ["transports", "pubsub", "dep:linera-alloy-transport-ipc"]
transport-ipc-mock = ["linera-alloy-transport-ipc?/mock"]
transport-ws = ["transports", "pubsub", "dep:linera-alloy-transport-ws"]

# ---------------------------------------- Core re-exports --------------------------------------- #

dyn-abi = ["alloy-core/dyn-abi"]
json-abi = ["alloy-core/json-abi"]
json = ["alloy-core/json"]
sol-types = ["alloy-core/sol-types"]

tiny-keccak = ["alloy-core/tiny-keccak"]
native-keccak = ["alloy-core/native-keccak"]
asm-keccak = ["alloy-core/asm-keccak"]

postgres = ["alloy-core/postgres"]
getrandom = ["alloy-core/getrandom"]
rand = ["alloy-core/rand"]
rlp = ["alloy-core/rlp"]
serde = ["alloy-core/serde", "linera-alloy-eips?/serde", "linera-alloy-serde"]
ssz = ["alloy-core/ssz", "linera-alloy-rpc-types?/ssz", "linera-alloy-rpc-types-engine?/ssz"]
arbitrary = [
    "alloy-core/arbitrary",
    "linera-alloy-consensus?/arbitrary",
    "linera-alloy-eips?/arbitrary",
    "linera-alloy-rpc-types?/arbitrary",
]
k256 = ["alloy-core/k256", "linera-alloy-consensus?/k256", "alloy-network?/k256"]
kzg = ["linera-alloy-consensus?/kzg"]
eip712 = [
    "alloy-core/eip712",
    "alloy-signer?/eip712",
    "alloy-signer-aws?/eip712",
    "alloy-signer-gcp?/eip712",
    "alloy-signer-ledger?/eip712",
    # TODO: https://github.com/alloy-rs/alloy/issues/201
    # "alloy-signer-trezor?/eip712",
]
