[package]
name = "linera-alloy-contract"
description = "Interact with on-chain contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-network.workspace = true
linera-alloy-provider.workspace = true
linera-alloy-rpc-types.workspace = true
linera-alloy-transport.workspace = true

linera-alloy-dyn-abi = { workspace = true, features = ["std"] }
linera-alloy-json-abi.workspace = true
linera-alloy-primitives.workspace = true
linera-alloy-sol-types.workspace = true

futures-util.workspace = true
futures.workspace = true
thiserror.workspace = true

linera-alloy-pubsub = { workspace = true, optional = true }

[dev-dependencies]
linera-alloy-rpc-client = { workspace = true, features = ["pubsub", "ws"] }
linera-alloy-transport-http.workspace = true
linera-alloy-node-bindings.workspace = true
linera-alloy-provider = { workspace = true, features = ["anvil"] }

reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[features]
pubsub = ["linera-alloy-provider/pubsub", "dep:linera-alloy-pubsub"]
