[package]
name = "linera-alloy-eip7547"
description = "EIP-7547: Inclusion Lists types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
linera-alloy-rpc-types-engine = { workspace = true }
linera-alloy-serde = { workspace = true }

# serde
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
