[package]
name = "linera-alloy-genesis"
description = "Ethereum genesis file definitions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
linera-alloy-serde.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = ["alloy-primitives/std", "linera-alloy-serde/std", "serde/std"]
