[package]
name = "linera-alloy-network"
description = "Ethereum blockchain RPC behavior abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-consensus = { workspace = true, features = ["std"] }
linera-alloy-eips = { workspace = true, features = ["serde"] }
linera-alloy-json-rpc.workspace = true
linera-alloy-primitives.workspace = true
linera-alloy-rpc-types.workspace = true
linera-alloy-signer.workspace = true
linera-alloy-sol-types.workspace = true

auto_impl.workspace = true
async-trait.workspace = true
futures-utils-wasm.workspace = true
thiserror.workspace = true

[dev-dependencies]
#linera-alloy-signer-wallet.workspace = true
tokio.workspace = true

[features]
k256 = ["linera-alloy-primitives/k256", "linera-alloy-consensus/k256"]
