[package]
name = "linera-alloy-provider"
description = "Interface with an Ethereum blockchain"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-eips.workspace = true
linera-alloy-consensus.workspace = true
linera-alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-node-bindings = { workspace = true, optional = true }
alloy-signer-wallet = { workspace = true, optional = true }
linera-alloy-rpc-client.workspace = true
linera-alloy-rpc-types-trace.workspace = true
linera-alloy-rpc-types.workspace = true
linera-alloy-rpc-types-engine = { workspace = true, optional = true }
linera-alloy-transport-http = { workspace = true, optional = true }
linera-alloy-transport-ipc = { workspace = true, optional = true }
linera-alloy-transport-ws = { workspace = true, optional = true }
linera-alloy-pubsub = { workspace = true, optional = true }
linera-alloy-transport.workspace = true
alloy-primitives.workspace = true

alloy-chains.workspace = true
async-stream = "0.3"
async-trait.workspace = true
auto_impl.workspace = true
dashmap = "5.5"
futures-utils-wasm.workspace = true
futures.workspace = true
lru = "0.12"
pin-project.workspace = true
reqwest = { workspace = true, optional = true }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tracing.workspace = true
url = { workspace = true, optional = true }

[dev-dependencies]
alloy-node-bindings.workspace = true
linera-alloy-rpc-client = { workspace = true, features = ["reqwest"] }
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
alloy-signer.workspace = true
alloy-signer-wallet.workspace = true
linera-alloy-transport-http = { workspace = true, features = ["reqwest"] }

reqwest.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tempfile.workspace = true

[features]
default = ["reqwest", "reqwest-default-tls"]
pubsub = ["linera-alloy-rpc-client/pubsub", "dep:linera-alloy-pubsub"]
reqwest = [
    "dep:reqwest",
    "dep:url",
    "dep:linera-alloy-transport-http",
    "linera-alloy-rpc-client/reqwest",
]
hyper = ["dep:linera-alloy-transport-http", "dep:url", "linera-alloy-rpc-client/hyper"]
ws = ["pubsub", "linera-alloy-rpc-client/ws", "linera-alloy-transport-ws"]
ipc = ["pubsub", "linera-alloy-rpc-client/ipc", "linera-alloy-transport-ipc"]
reqwest-default-tls = ["linera-alloy-transport-http?/reqwest-default-tls"]
reqwest-rustls-tls = ["linera-alloy-transport-http?/reqwest-rustls-tls"]
reqwest-native-tls = ["linera-alloy-transport-http?/reqwest-native-tls"]
anvil = ["reqwest", "dep:alloy-node-bindings", "dep:alloy-signer-wallet"]
engine-api = ["dep:linera-alloy-rpc-types-engine"]
