[package]
name = "linera-alloy-rpc-client"
description = "Low-level Ethereum JSON-RPC client implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-json-rpc.workspace = true
linera-alloy-transport-http.workspace = true
linera-alloy-transport.workspace = true

futures.workspace = true
pin-project.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower.workspace = true
tracing.workspace = true

linera-alloy-primitives = { workspace = true, optional = true }
linera-alloy-pubsub = { workspace = true, optional = true }
linera-alloy-transport-ws = { workspace = true, optional = true }

reqwest = { workspace = true, optional = true }

hyper-util = { workspace = true, optional = true }

url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
linera-alloy-transport-ipc = { workspace = true, optional = true }

[dev-dependencies]
linera-alloy-primitives.workspace = true
linera-alloy-node-bindings.workspace = true
linera-alloy-transport-ipc = { workspace = true, features = ["mock"] }
linera-alloy-transport-ws.workspace = true

tempfile = "3"
futures-util.workspace = true

[features]
default = ["reqwest"]
reqwest = ["dep:url", "dep:reqwest", "linera-alloy-transport-http/reqwest"]
hyper = ["dep:url", "dep:hyper-util", "linera-alloy-transport-http/hyper"]
pubsub = ["dep:linera-alloy-pubsub", "dep:linera-alloy-primitives"]
ws = ["pubsub", "dep:linera-alloy-transport-ws", "dep:url"]
ipc = ["pubsub", "dep:linera-alloy-transport-ipc"]
