[package]
name = "linera-alloy-signer-aws"
description = "Ethereum AWS KMS signer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-consensus = { workspace = true, features = ["std"] }
linera-alloy-network.workspace = true
alloy-primitives.workspace = true
linera-alloy-signer.workspace = true

async-trait.workspace = true
aws-sdk-kms = { version = "1", default-features = false }
k256.workspace = true
spki = { workspace = true, features = ["std"]}
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1", default-features = false }

[features]
eip712 = ["linera-alloy-signer/eip712"]
