[package]
name = "linera-alloy-signer-gcp"
description = "Ethereum GCP KMS signer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-consensus = { workspace = true, features = ["std"] }
linera-alloy-network.workspace = true
alloy-primitives.workspace = true
linera-alloy-signer.workspace = true

async-trait.workspace = true
gcloud-sdk = { version = "0.24", features = ["google-cloud-kms-v1"] }
k256 = { workspace = true, features = ["pem"] }
spki.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
eip712 = ["linera-alloy-signer/eip712"]
