[package]
name = "linera-alloy-signer-ledger"
description = "Ethereum Ledger signer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
linera-alloy-consensus = { workspace = true, features = ["std"] }
linera-alloy-primitives.workspace = true
linera-alloy-signer.workspace = true

async-trait.workspace = true
coins-ledger = { version = "0.10", default-features = false }
futures-util.workspace = true
semver.workspace = true
thiserror.workspace = true
tracing.workspace = true

# eip712
linera-alloy-sol-types = { workspace = true, optional = true }
linera-alloy-dyn-abi = { workspace = true, optional = true }
linera-alloy-network.workspace = true

[dev-dependencies]
linera-alloy-consensus = { workspace = true, features = ["std"] }
alloy-rlp.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test.workspace = true
tracing-subscriber.workspace = true

[features]
eip712 = ["linera-alloy-signer/eip712", "dep:linera-alloy-sol-types", "dep:linera-alloy-dyn-abi"]

# WASM support
browser = ["coins-ledger/browser"]
node = ["coins-ledger/node"]
